--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -181,9 +181,12 @@
 
     <bool name="config_sf_slowBlur">true</bool>
 
-    <!-- This device allows sms service. -->
+    <!-- This device allows sms and phone service. -->
     <bool name="config_sms_capable">true</bool>
-    <bool name="config_voice_capable">false</bool>
+    <bool name="config_voice_capable">true</bool>
+
+    <!-- Allow all rotations -->
+    <bool name="config_allowAllRotations">true</bool>
 
     <!-- FIXME!!! Workaround for devices with broken keyboards -->
     <bool name="config_forceDisableHardwareKeyboard">true</bool>
