p5att: Disable electron beam
Change-Id: I977af4b8fab108566e4bd5f17b27d6683fbd6a8c

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -196,4 +196,6 @@
         <item>25</item>
     </integer-array>
 
+    <!-- Electron beam looks pretty silly on this device because of the rotated display -->
+    <bool name="config_animateScreenLights">true</bool>
 </resources>
